# knative-personal

./: .gitignore  Makefile  Tiltfile
apps/svc1/: Cargo.toml
apps/svc1/src/: main.rs
apps/svc1/src/helpers/: mod.rs
deploy/: values.yaml
deploy/templates/: service.yaml
docker/: k3s-wasm.Dockerfile  rust.Dockerfile
infra/: helmfile.yaml
infra/charts/knative-serving/: Chart.yaml
infra/charts/knative-serving/templates/: serving.yaml
